--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # ============================================================
 # 🟢 Node.js + AWS Deploy Safe .gitignore
 # ============================================================
-
+.env
 # Node.js dependencies
 node_modules/
 npm-debug.log*
